[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
crypto = { version = "0.5.1", features = ["universal-hash"] }
flate2 = "1.0.34"                                # compression
regex = "1.11.1"
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling

[dev-dependencies]
tempfile = "3.14.0"
